--- a/views/home.hbs
+++ b/views/home.hbs
@@ -11,13 +11,13 @@
         <div class="info">
         {{#each team}}
         <div class="info-panel">
-            <img src="images/{{ Image }}" alt="image">
+            <img src="images/{{ IMAGE }}" alt="image">
 
             <a class="u-link" href="{{ ID }}">View More</a>
 
-            <h1>{{ Title }}</h1>
-            <h3{{ Description }}></h3>
-            <h4>{{ Favourite }}</h4>
+            <h1>{{ TITTLE }}</h1>
+            <h3{{ DESCRIPTION }}></h3>
+            {{!-- <h4>{{ Favourite }}</h4> --}}
 
         </div>
           
