database is working

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,16 +1,16 @@
     <section id="section_one">
         <div class="fav_info">
-            <h1 class="header_one">These are my three favourite things</h1>
+            <h1 class="main-header">These are my three favourite things</h1>
             <p>So many things give me joy, but these three things actually make me feel alive</p>
         </div>
     </section>
 
 
-    <section id="main_info">
+    <section id="container">
         
-        <div class="info">
+        <div class="information">
         {{#each team}}
-        <div class="info-panel">
+        <div class="panel">
             <img src="images/{{ IMAGE }}" alt="image">
 
             <a class="u-link" href="{{ ID }}">View More</a>
