--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,7 +24,7 @@ body {
     padding: 0 10px 0 10px;
 }
 
-.info-panel {
+.panel {
     margin-left: 10px;
     margin-right: 10px;
     width: 300px;
@@ -32,12 +32,13 @@ body {
     flex-direction: column;
 }
 
-.info-panel h1, h3, h4 {
+.panel h1, h3, h4 {
     color: darkgoldenrod;
 }
 
-.info-panel img {
+.panel img {
     width: 100%;
+    height: 100%;
     padding: 0 5px 0 5px;
 }
 
@@ -52,13 +53,13 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 #to-top { position: fixed; bottom: 10px; right: 10px; display: none; }
 
 @media screen and (min-width: 360px) {
-    .info-panel {
+    .panel {
         margin-left: 10px;
         margin-right: 20px;
         
